top_bar alignments fixed up and functional. Adjustments to tool_bar.

--- a/src/css_modules/campaign.module.css
+++ b/src/css_modules/campaign.module.css
@@ -13,25 +13,56 @@ main{
         border: solid black;
         border-radius: 25px;
         background-color: rgba(0, 0, 0, 0.5);
+
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        align-content:center;
+        flex-grow:0,0,0;
+
         min-width: 80%;
         width: 95%;
         max-width: 95%;
         min-height: fit-content;
         height: 100px;
         max-height:20%;
+
         margin-top: 20px;
         margin-bottom: 20px;
 
         img{
             border: solid black;
             border-radius: 75px;
-            height: 100px;
-            width: 100px;
             background-color: rgba(255, 255, 255, 0.5);
 
+            height: 120px;
+            width: 120px;
+            
+            margin-left: 15px;
         }
+
+        .title_box{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            
+
+            text-align: center;
+
+        }
+
+        .dashboard_menu{
+            border: solid black;
+            border-radius: 15px;
+            background-color: rgba(255, 255, 255, 0.5);
+
+            height: 120px;
+            width: 120px;
+
+            margin-right: 15px;
+        }
+
     }
 
     .tool_bar{
@@ -42,8 +73,8 @@ main{
         width:95%;
         max-width: auto;
         min-height: fit-content;
-        height:15%;
-        max-height: auto;
+        height:10%;
+        max-height: 10%;
         margin-top: 2%;
         margin-bottom: 2%;
     }
@@ -60,10 +91,13 @@ main{
         .card{
             border: solid black;
             border-radius: 25px;
+            background-color: rgba(0, 0, 0, 0.5);
+
+
+
             min-width:10%;
             width: 20%;
             max-width:50%;
-            background-color: rgba(0, 0, 0, 0.5);
 
             font-weight: bolder;
             font-size:xx-large;
